# ttdigirpg

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  dependencies.dot
.github/workflows/: claude.yml
src/: api_server.rs  demo.rs  lib.rs  main.rs
src/database/: game_data.db
src/lib/api/: handlers.rs  mod.rs  models.rs  server.rs  tests.rs
src/lib/entities/: character.rs  database.rs  economy.rs  mod.rs
src/lib/systems/: mod.rs
